[package]
name = "less_slow"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5" # For benchmarking
futures = "0.3"   # If you want to do async/await streams instead

[profile.release]
opt-level = 3     # Corresponds to -O3
lto = true        # Enables Link Time Optimization for further optimizations
codegen-units = 1 # May increase compilation time but optimizes further
rpath = false     # On some systems, setting this to false can help with optimizations

[[bench]]
name = "less_slow"
path = "less_slow.rs"
harness = false
