[package]
name = "less_slow"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5" # For benchmarking
async-stream = "0.3" # Pseudo-coroutines downloaded over 80 M times
futures = "0.3"  
chrono = { version = "0.4", features = ["std"] }

[profile.release]
opt-level = 3     # Corresponds to -O3
lto = true        # Enables Link Time Optimization for further optimizations
codegen-units = 1 # May increase compilation time but optimizes further
rpath = false     # On some systems, setting this to false can help with optimizations

[[bench]]
name = "less_slow"
path = "less_slow.rs"
harness = false
